# behavioral-attention-score

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_appendix_analysis.py  run_comparison_study.py  run_experiment.py
dataset_generator/: __init__.py  experiment_appendix.py  experiment_reproducibility.py
dataset_generator/bas/: __init__.py  confidence.py  config.py  evidence.py  explanations.py  feature_extractor.py  models.py  normalizer.py  report.py  scorer.py  serialization.py  session_summary.py  smoother.py
dataset_generator/classifier/: __init__.py  calibration.py  feature_importance.py  feature_selection.py  metrics.py  models.py  predictor.py  preprocessing.py  sequence_model.py  serialization.py  splitting.py  trainer.py
docs/: API.md  APPENDIX_ANALYSIS.md  ARCHITECTURE.md  COMPARISON_STUDY.md  DEEP_LEARNING_COMPARISON.md  DESIGN_DECISIONS.md  EVALUATION.md  EXPERIMENTAL_DQN.md  OFFLINE_RL.md  ORCHESTRATION.md  PHASE_ROADMAP.md  PIPELINE.md  RL_FORMALIZATION.md  TESTING.md
scripts/: export_dashboard_data.py
tests/: test_bas.py  test_baselines.py  test_behaviour_generator.py  test_classifier.py  test_config.py  test_dataset_pipeline.py  test_evaluation.py  test_experiment_appendix.py  test_experiment_reproducibility.py  test_intervention.py  test_orchestration.py  test_prompt_generator.py  test_response_generator.py  test_reward.py  test_rl_experimental.py  test_rl_offline.py  test_sequence_classifier.py  test_session_simulator.py  test_student_profile_generator.py
web/: dashboard.html  experimental_rl.html  index.html
(+114 files in other folders)
